[gd_scene load_steps=13 format=3 uid="uid://ko2gkm2upmtm"]

[ext_resource type="Script" path="res://Scenes/Top_Bar.gd" id="1_3l8qs"]
[ext_resource type="Texture2D" uid="uid://frbf40si3546" path="res://Icons/minimize.png" id="1_okw7x"]
[ext_resource type="Texture2D" uid="uid://bsclowtorgkjk" path="res://Icons/deadskul.png" id="2_4gfnh"]
[ext_resource type="Texture2D" uid="uid://daos0pw62skr5" path="res://Icons/x.png" id="2_6ag32"]
[ext_resource type="Script" path="res://Scenes/draggabletexturerect.gd" id="2_k70a2"]
[ext_resource type="AudioStream" uid="uid://c32gpe1clc1nu" path="res://SFX/Hover.wav" id="6_ywnmq"]
[ext_resource type="AudioStream" uid="uid://7vgvyid34o8j" path="res://SFX/click.wav" id="7_h2hyo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ivk77"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rw8as"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_68lsd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xjmh8"]

[sub_resource type="Theme" id="Theme_kuho3"]
Button/styles/focus = SubResource("StyleBoxEmpty_ivk77")
Button/styles/hover = SubResource("StyleBoxEmpty_rw8as")
Button/styles/normal = SubResource("StyleBoxEmpty_68lsd")
Button/styles/pressed = SubResource("StyleBoxEmpty_xjmh8")

[node name="X Bar" type="Control"]
custom_minimum_size = Vector2(0, 17)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3l8qs")

[node name="KAPPACOLLECTOR" type="ColorRect" parent="."]
custom_minimum_size = Vector2(228.025, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "KAPPACOLLECTOR"
color = Color(0.0980392, 0.105882, 0.105882, 1)
metadata/_edit_use_anchors_ = true

[node name="container" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="container"]
layout_mode = 2
texture = ExtResource("2_4gfnh")
expand_mode = 2

[node name="Label" type="Label" parent="container"]
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 17
text = "KAPPACOLLECTOR"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="drag_bar" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(228.025, 0)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.0980392, 0.105882, 0.105882, 0)
script = ExtResource("2_k70a2")
metadata/_edit_use_anchors_ = true

[node name="Minimize" type="Button" parent="HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme = SubResource("Theme_kuho3")
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
icon = ExtResource("1_okw7x")
flat = true

[node name="Exit" type="Button" parent="HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme = SubResource("Theme_kuho3")
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
icon = ExtResource("2_6ag32")
flat = true

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ywnmq")

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_h2hyo")
volume_db = -4.0

[connection signal="gui_input" from="HBoxContainer/drag_bar" to="HBoxContainer/drag_bar" method="_on_gui_input"]
[connection signal="mouse_entered" from="HBoxContainer/Minimize" to="." method="button_hover"]
[connection signal="pressed" from="HBoxContainer/Minimize" to="." method="_on_minimize_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/Exit" to="." method="button_hover"]
[connection signal="pressed" from="HBoxContainer/Exit" to="." method="_on_exit_pressed"]
